--- a/src/components/Header/header.less
+++ b/src/components/Header/header.less
@@ -3,7 +3,6 @@
 @navbarHeight: 40px;
 
 .headerContainer {
-  height: @navbarHeight;
   vertical-align: middle;
   padding: 40px 0 40px;
 
